<resources>
    <string name="app_name">My Application</string>
    <string name="bienvenido">Bienvenido!</string>
    <string name="tiene_cuenta">¿Tiene Cuenta?</string>
    <string name="registrate_aqui">REGISTRATE AQUI</string>
    <string name="correo_electronico">Correo Electronico</string>
    <string name="iniciar_secion">Iniciar_Secion</string>
    <string name="todo">TODO</string>
    <string name="contrase_a">Contraseña</string>
    <string name="Nombre_del_Usuario">Nombre del Usuario</string>
    <string name="registrarse">Registrarse</string>
    <string name="confirmar_contrase_a">Confirmar Contraseña</string>
    <string name="mi_banquete">Mi Banquete</string>
    <string name="custom_title">Un momento</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Crear_Publicacion">Crear Publicacion</string>
    <string name="Categoria">Categoria</string>
    <string name="Descripcion">Descripcion</string>
    <string name="Publicar">Publicar</string>
    <string name="completar_registro">Completar Registro</string>
    <string name="Filtros">Filtros</string>
    <string name="Chat">Chat</string>
    <string name="Perfil">Perfil</string>
    <string name="Pintura">Pintura</string>
    <string name="escultura">Escultura</string>
    <string name="fotografia">Fotografia</string>
    <string name="arte_digital">Arte Digital</string>
    <string name="pinacotheca">Pinacothec@</string>


</resources>